--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -56,6 +58,7 @@
                     <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search" />
                 </form>
                 <button class="btn btn-outline-light" type="submit">Search</button>
+                
                 <a href="#" class="btn btn-outline-light ms-2" id="logoutButton" onclick="handleLogout()">Log Out</a>
             </div>
         </div>
@@ -77,6 +80,17 @@
         <button id="send-button" class="btn btn-primary mt-2">Send</button>
     </div>
 </section>
+
+<section>
+    <div class="container p-4">
+        <h2 class="text-black">Your Cart</h2>
+        <div id="cart-container" class="row">
+            <!-- Cart items will be inserted here dynamically -->
+        </div>
+        <div id="checkout-container"></div>
+    </div>
+</section>
+
 <section>
     <div class="container p-4">
         <h2 class="text-black">Trending Movies & TV Shows</h2>
@@ -94,42 +108,155 @@
     </div>
 </footer>
 <script>
-    document.addEventListener("DOMContentLoaded", () => {
-        fetch("/movies")
-            .then(response => response.json())
-            .then(movies => {
-                const container = document.getElementById("movies-container");
-                container.innerHTML = ""; // Clear container before appending movies
+   document.addEventListener("DOMContentLoaded", () => {
+    fetch("/movies")
+        .then(response => response.json())
+        .then(movies => {
+            const container = document.getElementById("movies-container");
+            container.innerHTML = ""; // Clear container before appending movies
 
-                movies.forEach(movie => {
-                    const movieCard = `
-                    <div class="col-12 mb-4">
-                        <div class="card" style="max-width: 100%; height: 220px;">
-                            <div class="row g-0 h-100">
-                                <div class="col-md-2 d-flex align-items-center">
-                                    <img src="${movie.image_link}" class="card-img" style="height: 200px; width: auto" alt="${movie.title}">
-                                </div>
-                                <div class="col-md-10">
-                                    <div class="card-body d-flex flex-column h-100">
-                                        <h5 class="card-title">${movie.title} (${movie.release_year})</h5>
-                                        <p class="card-text"><strong>Director:</strong> ${movie.director}</p>
-                                        <p class="card-text"><strong>Country:</strong> ${movie.country}</p>
-                                        <p class="card-text">${movie.description}</p>
-                                        <div class="mt-auto d-flex justify-content-between align-items-center">
-                                            <span class="fs-5 fw-bold">$${movie.price.toFixed(2)}</span>
-                                            <button class="btn btn-primary">Add to Cart</button>
-                                        </div>
+            movies.forEach(movie => {
+                const movieCard = `
+                <div class="col-12 mb-4">
+                    <div class="card" style="max-width: 100%; height: 220px;">
+                        <div class="row g-0 h-100">
+                            <div class="col-md-2 d-flex align-items-center">
+                                <img src="${movie.image_link}" class="card-img" style="height: 200px; width: auto" alt="${movie.title}">
+                            </div>
+                            <div class="col-md-10">
+                                <div class="card-body d-flex flex-column h-100">
+                                    <h5 class="card-title">${movie.title} (${movie.release_year})</h5>
+                                    <p class="card-text"><strong>Director:</strong> ${movie.director}</p>
+                                    <p class="card-text"><strong>Country:</strong> ${movie.country}</p>
+                                    <p class="card-text">${movie.description}</p>
+                                    <div class="mt-auto d-flex justify-content-between align-items-center">
+                                        <span class="fs-5 fw-bold">$${movie.price.toFixed(2)}</span>
+                                        <button class="btn btn-primary add-to-cart" 
+                                            data-id="${movie.id}" 
+                                            data-title="${movie.title}" 
+                                            data-price="${movie.price}" 
+                                            data-image="${movie.image_link}">
+                                            Add to Cart
+                                        </button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                `;
-                    container.innerHTML += movieCard;
+                </div>
+            `;
+                container.innerHTML += movieCard;
+            });
+
+            // Attach event listeners after movies are loaded
+            document.querySelectorAll(".add-to-cart").forEach(button => {
+                button.addEventListener("click", function () {
+                    const movie = {
+                        id: this.dataset.id,
+                        title: this.dataset.title,
+                        price: parseFloat(this.dataset.price),
+                        image: this.dataset.image,
+                        quantity: 1
+                    };
+                    addToCart(movie);
                 });
-            })
-            .catch(error => console.error("Error fetching movies:", error));
+            });
+
+            updateCartUI();
+        })
+        .catch(error => console.error("Error fetching movies:", error));
+});
+
+function addToCart(movie) {
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+    const existingMovie = cart.find(item => item.id === movie.id);
+    if (!existingMovie) {
+        cart.push(movie);
+    }
+
+    localStorage.setItem("cart", JSON.stringify(cart));
+    updateCartUI();
+}
+
+function removeFromCart(index) {
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+    cart.splice(index, 1);
+
+    localStorage.setItem("cart", JSON.stringify(cart));
+    updateCartUI();
+}
+
+function updateCartUI() {
+    const cartContainer = document.getElementById("cart-container");
+    const checkoutContainer = document.getElementById("checkout-container");
+
+    if (!cartContainer || !checkoutContainer) return;
+
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+    if (cart.length === 0) {
+        cartContainer.innerHTML = "<p class='text-black'>Your cart is empty.</p>";
+        checkoutContainer.innerHTML = ""; // Hide checkout button
+        return;
+    }
+
+    let totalPrice = 0;
+    cartContainer.innerHTML = cart.map((item, index) => {
+        totalPrice += item.price;
+        return `
+            <div class="cart-item d-flex align-items-center mb-3 border p-2">
+                <img src="${item.image}" alt="${item.title}" width="50" class="me-2">
+                <div>
+                    <p class="mb-0 text-black fw-bold">${item.title}</p>
+                    <p class="mb-0 text-black">Price: $${item.price.toFixed(2)}</p>
+                </div>
+                <button class="btn btn-danger ms-auto" onclick="removeFromCart(${index})">Remove</button>
+            </div>
+        `;
+    }).join("");
+
+    cartContainer.innerHTML += `<h4 class="text-black fw-bold">Total: $${totalPrice.toFixed(2)}</h4>`;
+
+    // Show checkout button
+    checkoutContainer.innerHTML = `
+        <button class="btn btn-success mt-2 w-100">Checkout</button>
+    `;
+
+}
+
+function checkout() {
+    // Retrieve cart items from local storage
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    if (cart.length === 0) {
+      alert("Your cart is empty!");
+      return;
+    }
+
+    // Send a POST request with cart data to the backend
+    fetch("/checkout", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({ movies: cart })
+    })
+    .then(response => response.json())
+    .then(data => {
+      if (data.status === "success") {
+        alert("Checkout successful!");
+        localStorage.removeItem("cart");
+        updateCartUI();
+      } else {
+        alert("Checkout failed. Please try again.");
+      }
+    })
+    .catch(error => {
+      console.error("Error during checkout:", error);
+      alert("An error occurred during checkout.");
     });
+}
+
 </script>
 </body>
 </html>
